--- a/addons/skin.estuary/language/resource.language.en_gb/strings.po
+++ b/addons/skin.estuary/language/resource.language.en_gb/strings.po
@@ -186,10 +186,7 @@ msgctxt "#31033"
 msgid "Your rating"
 msgstr ""
 
-#: /xml/DialogVideoInfo.xml
-msgctxt "#31034"
-msgid "Extended info"
-msgstr ""
+#empty string with id 31034
 
 #: /xml/DialogPVRChannelManager.xml /xml/DialogPVRChannelsOSD.xml /xml/DialogPVRGuideOSD.xml /xml/Variables.xml /xml/FileBrowser.xml
 msgctxt "#31035"
@@ -392,12 +389,7 @@ msgctxt "#31089"
 msgid "Available groups"
 msgstr ""
 
-#: /xml/DialogVideoInfo.xml
-msgctxt "#31090"
-msgid "Search trailer"
-msgstr ""
-
-#empty string with id 31091
+#empty strings from id 31090 to 31091
 
 #: /xml/VideoOSD.xml /xml/Variables.xml
 msgctxt "#31092"
@@ -503,15 +495,12 @@ msgctxt "#31113"
 msgid "Search local library"
 msgstr ""
 
-#: /xml/Custom_1107_SearchDialog.xml /xml/DialogMusicInfo.xml
+#: /xml/Custom_1107_SearchDialog.xml
 msgctxt "#31114"
 msgid "Search YouTube"
 msgstr ""
 
-#: /xml/Custom_1107_SearchDialog.xml
-msgctxt "#31115"
-msgid "Search TheMovieDB"
-msgstr ""
+#empty string with id 31115
 
 #: /xml/Includes_Home.xml
 msgctxt "#31116"
@@ -558,10 +547,7 @@ msgctxt "#31124"
 msgid "Show images on map"
 msgstr ""
 
-#: /xml/DialogVideoInfo.xml
-msgctxt "#31125"
-msgid "Press up for actor info"
-msgstr ""
+#empty string with id 31125
 
 #: /xml/DialogVideoInfo.xml
 msgctxt "#31126"
