--- a/docs/manpages/kodi.bin.1
+++ b/docs/manpages/kodi.bin.1
@@ -17,6 +17,9 @@ Kodi runs in a stand alone environment without a window
 manager and supporting applications. For example, that
 enables network settings.
 .TP
+\fB\-\-headless\fR
+Kodi runs as a back-end server without any display.
+.TP
 \fB\-p\fR or \fB\-\-portable\fR
 Kodi will look for configurations in install folder instead of ~/.kodi
 .TP
