--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -9006,7 +9006,37 @@ msgctxt "#16336"
 msgid "IMX - Advanced"
 msgstr ""
 
-#empty strings from id 16337 to 16399
+#. Description of OSD video settings for flip #16337
+#: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
+msgctxt "#16337"
+msgid "Off"
+msgstr ""
+
+#. Description of OSD video settings for flip #16337
+#: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
+msgctxt "#16338"
+msgid "Flip Horizontally"
+msgstr ""
+
+#. Description of OSD video settings for flip #16337
+#: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
+msgctxt "#16339"
+msgid "Flip Vertically"
+msgstr ""
+
+#. Description of OSD video settings for flip #16337
+#: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
+msgctxt "#16340"
+msgid "Flip Both"
+msgstr ""
+
+#. Description of OSD video settings for flip #16337
+#: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
+msgctxt "#16341"
+msgid "Flip Video"
+msgstr ""
+
+#empty strings from id 16341 to 16399
 
 #: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
 msgctxt "#16400"
