[PVR][guiinfo][Estuary] New GUI info label Listitem.IsPremiere + implementation for PVR EPG info tags + visualization in Estuary.

--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -3774,7 +3774,11 @@ msgctxt "#841"
 msgid "Only this"
 msgstr ""
 
-#empty string with id 842
+#. Label for a first aired TV show
+#: addons/skin.estuary/xml/DialogPVRInfo.xml
+msgctxt "#842"
+msgid "New!"
+msgstr ""
 
 #. Label for a context menu entry to activate a currently inactive timer
 #: xbmc/pvr/PVRContextMenus.cpp
