--- a/addons/skin.estuary/language/resource.language.nl_nl/strings.po
+++ b/addons/skin.estuary/language/resource.language.nl_nl/strings.po
@@ -486,7 +486,7 @@ msgstr "Afspeelsnelheid"
 
 msgctxt "#31143"
 msgid "You did not set up PVR yet. In order to use PVR, choose a PVR client addon and configure it. Please visit http://kodi.wiki/view/PVR to learn more."
-msgstr "U heeft nog geen PVR ingesteld. Om gebruikt te kinen maken van PVR, kieze een PVR cliënt addon en configureer deze. Bezoek http://kodi.wiki/view/PVR om meer te weten tekomen."
+msgstr "U heeft nog geen PVR ingesteld. Om gebruik te kunnen maken van PVR, kies een PVR cliënt addon en configureer deze. Bezoek http://kodi.wiki/view/PVR om meer te weten te komen."
 
 msgctxt "#31144"
 msgid "Enter add-on browser"
